// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`greater() should fail when value is not greater than limit 1`] = `
Object {
  "children": null,
  "message": "Value should be greater than 5",
  "path": "",
}
`;

exports[`greater() should fail when value is not greater than limit 2`] = `
Object {
  "children": null,
  "message": "Value should be greater than 5",
  "path": "",
}
`;

exports[`greater() should fail when value is not greater than limit which is a reference 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be greater than 5",
      "path": "b",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`greater() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
